Use Set.of, List.of, List.sort, and Array.fill where possible