@@ -29,6 +29,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import org.openjdk.nashorn.internal.runtime.options.Options;
@@ -541,7 +542,7 @@ public final class PropertyHashMap implements Map <Object, Property> {
 
     @Override
     public Collection<Property> values() {
-        return Collections.unmodifiableList(Arrays.asList(getProperties()));
+        return List.of(getProperties());
     }
 
     @Override
